# minicpp

./: .clang-format  .clang-tidy  .gitignore  BitDomain.cpp  BitDomain.d  BitDomain.hpp  CMakeLists.txt  Makefile  Makefile2  README.GPU.md  README.md  README.txt  RuntimeMonitor.cpp  RuntimeMonitor.hpp  XCSP3lcg.h  acstr.cpp  acstr.hpp  allInterval.hpp  allInterval.org  amongNurse_split.org  autoCMake.sh  avar.hpp  bitbucket-pipelines.yml  bitset.cpp  bitset.hpp  car.org  clause.cpp  cnfParser.cpp  cnfParser.hpp  commandList.cpp  commandList.hpp  conListener.cpp  conListener.hpp  constraint.cpp  constraint.d  constraint.hpp  constraint_flatzinc.cpp  constraint_flatzinc.hpp  constraint_flatzinc_bool.cpp  constraint_flatzinc_bool.hpp  (+113 more)
Minicpp.xcworkspace/xcuserdata/ldm.xcuserdatad/: UserInterfaceState.xcuserstate
XCode.xcworkspace/xcuserdata/ldm.xcuserdatad/: UserInterfaceState.xcuserstate
benchmarks/: rcpsp_instances.py  run_benchmarks.py
bibd/: main.cpp
constraints/: bool_array.cpp  bool_array.hpp  bool_bin.cpp  bool_bin.hpp  bool_lin.cpp  bool_lin.hpp  bool_misc.cpp  bool_misc.hpp  flatzinc.cpp  flatzinc.hpp  int_array.cpp  int_array.hpp  int_bin.cpp  int_bin.hpp  int_lin.cpp  int_lin.hpp  int_tern.cpp  int_tern.hpp  utils.hpp
copl/copl.xcodeproj/: project.pbxproj
data/: asd
data/rcpsp/: J120_10_5.json  J120_10_6.json  J120_11_1.json  J120_11_4.json  J120_12_5.json  J120_12_7.json  J120_12_8.json  J120_13_1.json  J120_13_10.json  J120_13_3.json  J120_14_2.json  J120_14_6.json  J120_14_8.json  J120_15_10.json  J120_15_7.json  J120_16_10.json  J120_16_4.json  J120_16_6.json  J120_17_3.json  J120_17_6.json  J120_18_10.json  J120_18_9.json  J120_19_1.json  J120_19_10.json  J120_19_8.json  J120_1_1.json  J120_1_4.json  J120_1_6.json  J120_1_7.json  J120_20_1.json  J120_20_9.json  J120_21_1.json  J120_21_2.json  J120_21_5.json  J120_21_7.json  J120_21_8.json  J120_22_4.json  J120_22_7.json  J120_23_1.json  J120_23_6.json  (+350 more)
data/rcpsp/bl/: Bl2001.json  Bl2002.json  Bl2004.json  Bl2005.json  Bl2006.json  Bl2012.json  Bl2015.json  Bl2017.json  Bl2018.json  Bl2020.json  Bl2501.json  Bl2503.json  Bl2506.json  Bl2507.json  Bl2508.json  Bl2510.json  Bl2515.json  Bl2516.json  Bl2517.json  Bl2520.json
data/rcpsp/data_bl/: Bl2003.json  Bl2007.json  Bl2008.json  Bl2009.json  Bl2010.json  Bl2011.json  Bl2013.json  Bl2014.json  Bl2016.json  Bl2019.json  Bl2502.json  Bl2504.json  Bl2505.json  Bl2509.json  Bl2511.json  Bl2512.json  Bl2513.json  Bl2514.json  Bl2518.json  Bl2519.json
data/rcpsp/data_pack/: pack003.json  pack007.json  pack010.json  pack011.json  pack012.json  pack014.json  pack015.json  pack016.json  pack018.json  pack019.json  pack020.json  pack021.json  pack024.json  pack025.json  pack026.json  pack028.json  pack030.json  pack031.json  pack032.json  pack033.json  pack036.json  pack037.json  pack039.json  pack040.json  pack041.json  pack043.json  pack046.json  pack048.json  pack050.json
data/rcpsp/pack/: pack001.json  pack002.json  pack004.json  pack005.json  pack006.json  pack008.json  pack009.json  pack013.json  pack017.json  pack022.json  pack023.json  (+14 more)
examples/: Makefile  ais.cpp  bibd.cpp  clause.cpp  expTest.cpp  fz.cpp  magicserie.cpp  magicsquare.cpp  main.cpp  main2.cpp  main3.cpp  mainCont.cpp  mddamong.cpp  msperf.cpp  nqperf.cpp  nqueensAC.cpp  qap.cpp  qaplns.cpp  rcpsp.cu  rcpsp_cli.cpp  regular.cpp  stablemarriage.cpp  steel.cpp  table.cpp  table2.cpp  test.cpp  testCUM.cpp  testTT.cpp  tsp.cpp
examples/data/: workforce400-jobs.csv  workforce50-jobs.csv  workforce50.csv  workforce9.csv
examples/mdd/: MCP.cpp  MISP.cpp  MISPfile.cpp  SOP.cpp  aisMDDTuto.cpp  allBench.py  allInterval.cpp  allIntervalBC.cpp  alldiff.cpp  alldiffOverlap.cpp  alldiffOverlap0.cpp  among2.cpp  among2Relax.cpp  among4.cpp  among4Relax.cpp  amongNurse.cpp  amongNurse2.cpp  amongNurse_test.cpp  amongSeqGcc.cpp  amongsum.cpp  bench.py  carSeq.cpp  carSeqMDD.cpp  carSeqMDD_WVH.cpp  carSeq_newSearch.cpp  gccTest.cpp  mediumAllDiff.cpp  mediumAllDiffRelax.cpp  mediumAmong.cpp  mediumGCC.cpp  mediumGCCRelax.cpp  mediumSeq.cpp  mediumSeqRelax.cpp  mis.cpp  mis1.cpp  mis3.cpp  mis4.cpp  multipletTinyAmong.cpp  sequenceNurse.cpp  sequenceNurseSplit.cpp  (+15 more)
examples/mzn/: tsp.fzn  tsp.mzn  tsp.ozn  tsp_small.fzn
examples/pybench/: ad.py  magicsquare.py  mserie.py  nq.py  nqueens.py  nqueens0.py  qap.py  readme.org  tsp.py
examples/tutorial/: aisCP.cpp  aisMDD.cpp  atMost.cpp  atMostHandout.cpp  misCP.cpp  misMDD.cpp
examples_gpu/: rcpsp.cu
flatzinc/: .gitignore  flatzinc.cpp  flatzinc.h  generateParser.sh  parser.tab.cpp  parser.tab.h  parser.yxx  registry.cpp  registry.h
fz_constraints/: bool_array.cpp  bool_array.hpp  bool_bin.cpp  bool_bin.hpp  flatzinc.cpp  int_bin.cpp  int_bin.hpp  int_lin.cpp  int_lin.hpp
fz_parser/: ast.h  flatzinc.cpp  flatzinc.h  parser.tab.cpp  parser.yxx  registry.cpp
gfl/: Align.hpp  Allocators.hpp  ArenaAllocator.hpp  Array.hpp  ArrayView.hpp  Arrays.hpp  Backend.hpp  BitSet.hpp  BitUtils.hpp  ChronoUtils.hpp  CudaUtils.hpp  DebugUtils.hpp  FunQual.hpp  GFL.hpp  HashUtils.hpp  MathUtils.hpp  MatrixView.hpp  Memory.hpp  Scalar.hpp  SizedArray.hpp  Sort.hpp  Timer.hpp  Types.hpp  Vector.hpp  VectorView.hpp  Vectors.hpp  Views.hpp
global_constraints/: cumulative.cpp  cumulative.hpp
global_constraints_gpu/: cumulative.cu  cumulative.cuh
gpu_constraints/: cumulative.cu  cumulative.cuh
gpu_constriants/: cumulative.cu  cumulative.cuh
gpu_examples/: rcpsp.cu
libfca/: Matrix.hpp  Slice.hpp
libgpu/: Memory.cuh  Utils.cuh
minicpp/minicpp/: main.cpp
minicpp/minicpp.xcodeproj/: project.pbxproj
minitest/minitest/: main.cpp
minitest/minitest.xcodeproj/: project.pbxproj
minitest/minitest2/: main.cpp
notes/: Dec30Becca.org
old/libfca/: Utils.hpp
old/libgpu/: README.md
pybench/: nq.py  nqueens.py  qap.py
src/: Makefile  constraint.cpp  constraint.hpp  domain.hpp  explainer.cpp  explainer.hpp  handle.hpp  literal.cpp  literal.hpp  mallocWatch.cpp  matching.hpp  search.cpp  search.hpp  setup.mak  solver.cpp  solver.hpp  store.cpp
(+1666 files in other folders)
